--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-	"name": "express-ts-docker-template",
+	"name": "library_managements_apis",
 	"version": "1.0.0",
-	"description": "An express starter with typescript",
+	"description": "An backend for library management",
 	"author": "Robiul Hossain",
 	"licence": "MIT",
-	"repository": "coder7475/express-typescript-template",
+	"repository": "coder7475/library_management_apis",
 	"main": "dist/server.js",
 	"scripts": {
 		"dev": "node --import=tsx --watch src/server.ts",
