--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "dist/server.js",
 	"scripts": {
 		"dev": "node --import=tsx --watch src/server.ts",
-		"build": "tsc -p tsconfig.build.json",
+		"build": "tsup src/server.ts --out-dir dist --clean --no-dts",
 		"start": "node dist/server.js",
 		"lint": "biome lint --fix",
 		"format": "biome format --write"
@@ -28,6 +28,7 @@
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.4.2",
 		"tsconfig-paths": "^4.2.0",
+		"tsup": "^8.5.0",
 		"tsx": "^4.20.2",
 		"typescript": "^5.2.2"
 	},
