chore: Update .gitignore to include .env*.local; modify start script in package.json for production environment; enable trust proxy in app; enhance MongoDB connection error handling; fix minor formatting in tsconfig and envConfig files

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"scripts": {
 		"dev": "node --import=tsx --watch src/server.ts",
 		"build": "tsc && tsup src/server.ts --out-dir dist --clean",
-		"start": "node dist/server.js",
+		"start": "NODE_ENV=production node dist/server.js",
 		"lint": "biome lint --fix",
 		"format": "biome format --write"
 	},
