--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "dist/server.js",
 	"scripts": {
 		"dev": "node --import=tsx --watch src/server.ts",
-		"build": "tsc && tsup src/server.ts --out-dir dist --clean",
+		"build": "tsc",
 		"start": "NODE_ENV=production node dist/server.js",
 		"lint": "biome lint --fix",
 		"format": "biome format --write"
@@ -18,7 +18,6 @@
 		"dotenv": "^16.0.3",
 		"express": "^4.18.2",
 		"helmet": "^8.1.0",
-		"module-alias": "^2.2.3",
 		"mongoose": "^8.16.0",
 		"zod": "^3.25.67"
 	},
@@ -27,8 +26,6 @@
 		"@types/cors": "^2.8.19",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.4.2",
-		"tsconfig-paths": "^4.2.0",
-		"tsup": "^8.5.0",
 		"tsx": "^4.20.2",
 		"typescript": "^5.2.2"
 	},
