refactor: Update import paths for consistency and improve build process in package.json

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"main": "dist/server.js",
 	"scripts": {
 		"dev": "node --import=tsx --watch src/server.ts",
-		"build": "tsc",
+		"build": "tsc -p tsconfig.build.json",
 		"start": "NODE_ENV=production node dist/server.js",
 		"lint": "biome lint --fix",
 		"format": "biome format --write"
